# vinci-central-node

./: .gitignore  LICENSE.md  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  train_file_bundle.proto  train_file_bundle_pb2.py
.github/workflows/: deploy.yml
app/: main.py
app/Auth/: auth.py
app/clients/: rabbitmq_client.py
app/clients/s3/: interface.py  s3_client.py  s3_fake_client.py
app/db/: connection.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2023_09_27_0010-0324e87b7253_add_table_user_trainjob.py  2023_10_13_1820-3c4c8517b952_add_table_player_data.py
app/domains/core/controller/: user.py
app/domains/core/models/: user.py
app/domains/core/repository/: user_repository.py
app/domains/core/schemas/: user.py
app/domains/player_game_data/models/: player_data.py
app/domains/train_job/controller/: train_job.py
app/domains/train_job/models/: train_job.py
app/domains/train_job/repository/: train_job.py
app/domains/train_job/schemas/: train_job.py  train_job_constants.py
app/domains/train_job/services/: train_job.py
app/domains/train_results/controllers/: train_results.py
app/domains/train_results/services/: train_results.py
app/domains/train_stream/controllers/: train_stream.py
app/domains/train_stream/schemas/: constants.py  train_stream.py
app/domains/train_stream/utils/: websocket_manager.py
app/logs/: CloudWatchLogHandler.py
app/settings/: settings.py
